@@ -28,3 +28,10 @@ History
                         Use of EXIT_SUCCESS and EXIT_FAILURE
                         Fixes
 
+12/14/2005       1.2.0  Automatic detection of package AIDs, file size (-nvCodeLimit),
+                        applet AID in new install command
+                        Automatic selection of Security Domain AID
+						Linked against GlobalPlatform 2.0.1 library
+
+
+
